# gamEngineV2

./: .gitignore  CMakeLists.txt  README.md  build.bat  conanfile.txt  gitpush.bat  gitpush.sh  proje_analiz_raporu.txt  scene.json
assets/scripts/: test.lua
src/: main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h
src/core/: Application.cpp  Application.h  ResourceManager.cpp  ResourceManager.h  Time.h
src/ecs/: ECS.h  ECSSerializer.cpp  ECSSerializer.h
src/input/: InputManager.cpp  InputManager.h  InputMap.h
src/physics/: Physics.cpp  Physics.h
src/platform/: Window.cpp  Window.h
src/render/: Animator.cpp  Animator.h  AssimpLoader.cpp  AssimpLoader.h  Camera.cpp  Camera.h  CascadedShadowMap.cpp  CascadedShadowMap.h  IBL.cpp  IBL.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ParticleSystem.cpp  ParticleSystem.h  PointShadowMap.cpp  PointShadowMap.h  PostProcess.cpp  PostProcess.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  Skeleton.h  SkinnedMesh.cpp  SkinnedMesh.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h  Texture2D.cpp  Texture2D.h
src/scene/: Scene.h  SceneSerializer.cpp  SceneSerializer.h  Transform.h
src/scripting/: LuaEngine.cpp  LuaEngine.h
src/ui/: UIManager.cpp  UIManager.h
